# patch-for-visual-studio

./: CMakeLists.txt  INSTALL.win  README  README.md  backupfile.c  common.h  config.h.cmake  dirname.c  error.c  hash.c  inp.c  nonposix.c  nonposix.h  patch.c  pch.c  quotearg.c  quotesys.c  util.c  util.h
